Charry rompe img

--- a/PROYECTO-MJC memoorize/rompecabezas-prueba/puzzle.html
+++ b/PROYECTO-MJC memoorize/rompecabezas-prueba/puzzle.html
@@ -56,11 +56,11 @@
 
         <script>
             var images = [
-                { src: 'images/subamarino.jpeg', title: 'Submarino' },
-                { src: 'images/barco.jpg', title: 'Barco Pirata' },
-                { src: 'images/tiburon.jpeg', title: 'Cangrejo Pirata' },
-                { src: 'images/pulpo.jpeg', title: 'Pulpo' },
-                { src: 'images/pulpa.jpeg', title: 'Fondo Del Mar' }
+                { src: 'images/subamarino.jpeg', title: 'Submarino.' },
+                { src: 'images/barco.jpg', title: 'Barco Pirata.' },
+                { src: 'images/tiburon.jpeg', title: 'Cangrejo Pirata.' },
+                { src: 'images/pulpo.jpeg', title: 'Pulpo.' },
+                { src: 'images/pulpa.jpeg', title: 'Fondo Del Mar.' }
             ];
 
             $(function () {
@@ -77,7 +77,7 @@
                 });
             });
             function rules() {
-                alert('Vuelva a organizar las partes de la imagen de manera que formen correctamente la imagen. \n TEN UN BUEN JUEGO, DISFRUTALO 🌊');
+                alert('Vuelva a organizar las partes de la imagen de manera que formen correctamente la imagen. \n TEN UN BUEN JUEGO, DISFRUTALO 🌊...');
             }
             function about() {
                 alert('"Este juego ha sido desarrollado por AQUAC-MEMORY, Un grupo comprometido con la creación de experiencias innovadoras que estimulan la mente y promueven la diversión. ¡Gracias por elegirnos para acompañarte en cada desafío y aventura ⛵!"\nPuede ser contactado en: cachape64@gmail.com');
