Nombre en icono

--- a/PROYECTO-MJC memoorize/interfaz/index.html
+++ b/PROYECTO-MJC memoorize/interfaz/index.html
@@ -31,6 +31,6 @@
             <button id="readMore">INICIAR</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="bar.js"></script>
 </body>
 </html>
