juego de jesus finally

--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -27,7 +27,36 @@
                 <img src="../../img/logo/wordle.png" alt="" srcset="">
             </div>
             <div class="container">
-                
+                <div class="niveles">
+                    <div class="row">
+                        <a class="nivel col-3" href="niveles/index.html"> 
+                            <h1>1</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>2</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>3</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>4</h1>
+                        </a>                  
+                    </div>
+                    <div class="row">
+                        <a  class="nivel col-3" href=""> 
+                            <h1>5</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>6</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>7</h1>
+                        </a>
+                        <a class="nivel col-3" href="">
+                            <h1>8</h1>
+                        </a>  
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-1">
