--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -55,7 +55,7 @@
                     <div class="col-auto game-container">
                         <a href="../juegos/quiz/bar.html">
                             <button class="btn btn-custom game-button" onclick="navigateToGame(3)" style="margin-top: 150px; border: none;"> 
-                                <img src="../menu/img/logonumero.png" alt="Juego 2" class="game-logo" id="game2">
+                                <img src="../img/logo/wordle.png" alt="Juego 2" class="game-logo" id="game2">
                             </button>
                         </a>
                         <div class="game-description" id="desc2">Un emocionante juego de numeros.</div>
