--- a/PROYECTO-MJC memoorize/cartas-prueba/index.html
+++ b/PROYECTO-MJC memoorize/cartas-prueba/index.html
@@ -21,7 +21,7 @@
     <!-- MODAL INICIAL ELEGIR DIFICULTAD -->
     <div id="modal" class="modalDialog">
         <div class="modal-content">
-            <div class="modal-header"> Seleccione un nivel de dificultad </div>
+            <div class="modal-header"> Seleccione el nivel de dificultad </div>
             <div id="modal-body" class="modal-body">
                 <div id="dificultadBtn" class="modal-body">
                     <button id="facil" class="btn"> Fácil </button>
@@ -50,9 +50,9 @@
                     <label class='titlePtos'>Tiempo</label>
                 </div>
                 <div class="tabla">
-                    <input id="nombreJugador" type="text">
+                    <input id="nombreJugador" type="text" class="nombrar">
                     <label id="puntosPartida"></label>
-                    <label id="tiempoPartida"></label>
+                    <label id="tiempoPartida" ></label>
                 </div>
                 <div class="tabla footer">
                     <div></div>
