cambio en nivel

--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -29,7 +29,7 @@
                    
                 <button id="configuracionBtn" data-bs-toggle="modal" data-bs-target="#configuracion">
                     <img class="imgConfiguracion" src="../img/icon/configuraciones.png" alt="">
-                    <span id="descConfiguracion" class="nombre-icono" style="display: none;">Bajar/Subir</span>
+                    <span id="descConfiguracion" class="nombre-icono" style="display: none;">Volumen</span>
                 </button>             
             </div>
             
