--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -19,8 +19,8 @@
                 </div>
                 <div class="opciones">
                     <div class="rowes">
-                        <div class="opcion">hahhahahaha</div>
-                        <div class="opcion">jajjajajajja</div>
+                        <a href="" class="opcion">hahhahahaha</a>
+                        <a href="" class="opcion">jajjajajajja</a>
                     </div>    
                 </div>
             </div>
