--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -85,17 +85,17 @@
                             <p>usuario@correo.com</p>
                             <hr>
                             <h5>Tu avatar actual:</h5>
-                            <img id="avatarPerfil" src="img/icon/usuario.png" alt="Avatar actual" class="foto-perfil mb-4">
+                            <img id="avatarPerfil" src="../../img/icon/usuario.png" alt="Avatar actual" class="foto-perfil mb-4">
                             <h5>Elige un nuevo avatar:</h5>
                             <div class="row">
                                 <div class="col-4">
-                                    <img src="../../menu/img/imagen1.png" alt="Avatar 1" class="avatar-opcion" onclick="seleccionarAvatar('../menu/img/imagen1.png')">
+                                    <img src="../../menu/img/imagen1.png" alt="Avatar 1" class="avatar-opcion" onclick="seleccionarAvatar('../../menu/img/imagen1.png')">
                                 </div>
                                 <div class="col-4">
-                                    <img src="../../img/icon/usuario.png" alt="Avatar 2" class="avatar-opcion" onclick="seleccionarAvatar('../img/icon/usuario.png')">
+                                    <img src="../../img/icon/usuario.png" alt="Avatar 2" class="avatar-opcion" onclick="seleccionarAvatar('../../img/icon/usuario.png')">
                                 </div>
                                 <div class="col-4">
-                                    <img src="../../menu/img/imagen3.png" alt="Avatar 3" class="avatar-opcion" onclick="seleccionarAvatar('../menu/img/imagen3.png')">
+                                    <img src="../../menu/img/imagen3.png" alt="Avatar 3" class="avatar-opcion" onclick="seleccionarAvatar('../../menu/img/imagen3.png')">
                                 </div>
                             </div>
                             <hr>
