--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -85,7 +85,7 @@
                                 <p>usuario@correo.com</p>
                                 <hr>
                                 <h5>Tu avatar actual:</h5>
-                                <img id="avatarPerfil" src="img/icon/usuario.png" alt="Avatar actual" class="foto-perfil mb-4">
+                                <img id="avatarPerfil" src="../img/icon/usuario.png" alt="Avatar actual" class="foto-perfil mb-4">
                                 <h5>Elige un nuevo avatar:</h5>
                                 <div class="row">
                                     <div class="col-4">
