multiplayer crear y unirse

--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -19,8 +19,12 @@
                 </div>
                 <div class="opciones">
                     <div class="rowes">
-                        <a href="" class="opcion">hahhahahaha</a>
-                        <a href="" class="opcion">jajjajajajja</a>
+                        <button id="crear" href="" class="opcion">
+                            <p>Crear Sala</p>
+                        </button>
+                        <button id="unirse" href="" class="opcion">
+                            <p>Unirse a Sala</p>
+                        </button>
                     </div>    
                 </div>
             </div>
@@ -30,6 +34,8 @@
         </div>
     </div>
 
+
+    <script type="module" src="js/main.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
