--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../css/modal.css">
     <link rel="stylesheet" href="../css/offcanvas.css">
-    <link rel="stylesheet" href="../css/bar.css">
     <link rel="stylesheet" href="../css/icon.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 
 </head>   
@@ -97,13 +95,13 @@
                                 <h5>Elige un nuevo avatar:</h5>
                                 <div class="row">
                                     <div class="col-4">
-                                        <img src="../menu/img/imagen1.png" alt="Avatar 1" class="avatar-opcion" onclick="seleccionarAvatar('../menu/img/imagen1.png')">
+                                        <img src="../img/icon/usuario.png" alt="Avatar 1" class="avatar-opcion" onclick="seleccionarAvatar('../img/icon/usuario.png')">
                                     </div>
                                     <div class="col-4">
-                                        <img src="../img/icon/usuario.png" alt="Avatar 2" class="avatar-opcion" onclick="seleccionarAvatar('../img/icon/usuario.png')">
+                                        <img src="img/imagen1.png" alt="Avatar 2" class="avatar-opcion" onclick="seleccionarAvatar('img/imagen1.png')">
                                     </div>
                                     <div class="col-4">
-                                        <img src="../menu/img/imagen3.png" alt="Avatar 3" class="avatar-opcion" onclick="seleccionarAvatar('../menu/img/imagen3.png')">
+                                        <img src="img/imagen3.png" alt="Avatar 3" class="avatar-opcion" onclick="seleccionarAvatar('img/imagen3.png')">
                                     </div>
                                 </div>
                                 <hr>
