--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -157,7 +157,7 @@
                     <h5 class="modal-title" id="confirmarSalidaModalLabel">Confirmación</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-beody">
                     Si sales tendras que volver a iniciar sesion ¿Seguro que quieres salirte? 
                 </div>
                 <div class="modal-footer">
