cambio de Img del menu

--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -22,12 +22,11 @@
             </div>
             <div class="col-10 centrar">
                 <div class="col-4 m-auto">
-                    <img class="imgLogo m-auto" src="img/logopix.png" alt="">
+                    <img class="imgLogo m-auto" src="img/logo2.png" alt="">
                 </div>
                 <div class="col-4 m-auto">
                     <center>
-                        <button class="btn btnJugar m-auto" href="login/bar.html" onclick="createBubbles(event)">
-                            <h3 class="btnText">JUGAR</h3>  
+                        <button class="btn btnJugar m-auto" href="login/bar.html" onclick="createBubbles(event)"> 
                             <div class="bubbles"></div> <!-- Contenedor de burbujas -->
                         </button>
                     </center>
