--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -23,10 +23,11 @@
                         <div class="col-12 row">
                             <div class="col-6 row">
                                 <div id="players">
-                    
+                                    
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div id="configuraciones" class="col-6">
+
                             </div>
                         </div>
                     </div>  
@@ -56,7 +57,8 @@
         </div>
     </div>
 
-    <script type="module" src="js/main.js"></script>
+    id="<script src="js/main.js"></script>
+    <script src="js/configuraciones.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
