--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -35,7 +35,7 @@
     </div>
 
 
-    <script type="module" src="js/main.js"></script>
+    <script src="js/main.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
