logo pixelar nuevo

--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="col-10 centrar">
                 <div class="col-4 m-auto">
-                    <img class="imgLogo m-auto" src="img/logopix.png" alt="">
+                    <img class="imgLogo m-auto" src="img/logo/aqua-Memorize.png" alt="">
                 </div>
                 <div class="col-4 m-auto">
                     <center>
