--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -57,8 +57,7 @@
         </div>
     </div>
 
-    id="<script src="js/main.js"></script>
-    <script src="js/configuraciones.js"></script>
+    <script src="js/main.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
