--- a/PROYECTO-MJC memoorize/login/bar.html
+++ b/PROYECTO-MJC memoorize/login/bar.html
@@ -11,7 +11,7 @@
     <div class="center col">
         <div>
             <center>
-                <img class="logoI" src="../img/logo2.png" alt="Logo del Juego">
+                <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
             </center>
         </div>
         <div class="container center">
@@ -19,6 +19,7 @@
                 <div class="wave wave1"></div>
                 <div class="wave wave2"></div>
                 <div class="wave wave3"></div>
+                <span class="loading-text">0%</span>
             </div>
         </div>
     </div>
