--- a/PROYECTO-MJC memoorize/menu/bar.html
+++ b/PROYECTO-MJC memoorize/menu/bar.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +12,7 @@
     <div class="center col">
         <div>
             <center>
-                <img class="logoI" src="../img/logo2.png" alt="Logo del Juego">
+                <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
             </center>
         </div>
         <div class="container center">
@@ -19,6 +20,7 @@
                 <div class="wave wave1"></div>
                 <div class="wave wave2"></div>
                 <div class="wave wave3"></div>
+                <span class="loading-text">0%</span>
             </div>
         </div>
     </div>
