subir nuevas img

--- a/PROYECTO-MJC memoorize/multijugador/cartas/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/cartas/index.html
@@ -91,7 +91,9 @@
             <div class="reloj" id="Minutos">00</div>
             <div class="reloj" id="Segundos">:00</div>
         </div>
-        <div id="wrapper" class="wrapper"></div>
+        <div class="container1">
+            <div id="wrapper" class="wrapper"></div>
+        </div>
     </div>
 
     <script src="js/cronometro.js"></script>
