--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -30,12 +30,12 @@
 
                             </div>
                         </div>
-                    </div>  
+                    </div>
+                    <button onclick="location.href='../../cartas-prueba/index.html'" class="btn btn-primary boton">
+                        <h3 class="iniciar">INICIAR</h3>
+                    </button>
                 </div>
-            </div>
-            <div class="col-1">
-
-            </div>
+            </div> 
         </div>
     </div>
 
@@ -56,6 +56,8 @@
             </div>
         </div>
     </div>
+
+    
 
     <script src="js/main.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
