media login finalizada

--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -24,7 +24,7 @@
     
     <!-- Contenido principal -->
     <main>
-        <div id="formulario">
+        <div id="formulario" class="col-6">
             <form action="" method="post" class="row g-3">
                 <div class="logoForm col-md-6">
                     <center>
