--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
@@ -10,12 +10,31 @@
 </head>
 <body>
     <div id="contador"></div>
+    <div id="pista" >
+        <div class="pistas">
+            <ul>
+                <li>
+                    <p>materia abuntante en las playas, te textura granulada.</p>
+                </li>
+                <li>
+                    <p>materia abuntante en las playas, te textura granulada.</p>
+                </li>
+                <li>
+                    <p>materia abuntante en las playas, te textura granulada.</p>
+                </li>
+            </ul>
+        </div>
+        <img src="../../../img/icon/pirata.png" alt="">
+    </div>
     <div class="conteinerJuego">
-        <div id="pista" class="pistas"></div>
         <main class="main-container">
             <!--<h2 class="loading">cargando...</h2>-->
             <div class="fila" id="1">
-                <!--<input type="text" maxlength="1" class="square">-->
+                <input type="text" maxlength="1" class="square">
+                <input type="text" maxlength="1" class="square">
+                <input type="text" maxlength="1" class="square">
+                <input type="text" maxlength="1" class="square">
+                <input type="text" maxlength="1" class="square">
             </div>
         </main>
         <div class="resultado" id="resultado">
@@ -35,7 +54,7 @@
     </div>
 
 
-    <script src="./js/main.js"></script>
+    <!--<script src="./js/main.js"></script>-->
     <script src="../../../bootstrap/js/bootstrap.js"></script>
     <script src="../../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
