--- a/PROYECTO-MJC memoorize/multijugador/cartas/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/cartas/index.html
@@ -6,20 +6,20 @@
     <!-- FAVICON ANIMADO -->
     <link rel="shortcut icon" href="css/icon/favicon.gif" type="image.gif">
     <!-- CSS -->
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/cartas.css" />
     <link rel="stylesheet" media="(min-width: 1280px) and (max-width: 1400px) and (orientation: landscape)" href="css/mediumWindows.css" />
     <link rel="stylesheet" media="(min-width: 1024px) and (max-width: 1280px) and (orientation: landscape)" href="css/smallWindows.css" />
     <link rel="stylesheet" media="(max-width: 1024px) or (orientation: portrait)" href="css/verticalWindows.css" />
     <!-- CSS PLUGIN INTROJS -->
     <link rel="stylesheet" href="plugin/introJS/introjs.css">
     <!-- ICONOS -->
-    <link rel="stylesheet" href="css/icon/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/ic on/font-awesome-4.7.0/css/font-awesome.min.css">
     <title> Encuentra la pareja </title>
 </head>
 
 <body>
     <!-- MODAL INICIAL ELEGIR DIFICULTAD -->
-    <div id="modal" class="modalDialog">
+    <!-- <div id="modal" class="modalDialog">
         <div class="modal-content">
             <div class="modal-header"> Seleccione el nivel de dificultad </div>
             <div id="modal-body" class="modal-body">
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- MODAL GUARDAR PARTIDA -->
     <div id="modalScore" class="hide">
@@ -99,8 +99,8 @@
     <script src="js/cronometro.js"></script>
     <script src="js/imagenes.js"></script>
     <script src="js/modalScore.js"></script>
-    <script src="plugin/introJS/intro.js"></script>
-    <script src="js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/intro.js/minified/intro.min.js"></script>
+    <script src="js/cartas.js"></script>
 </body>
 
 </html>
