--- a/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/crearSala.css">
 </head>
 <body>
 
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/cambiarSala.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
