--- a/PROYECTO-MJC memoorize/multijugador/sala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/sala/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sala</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sala.css">
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
 </head>
 <body>
@@ -26,14 +26,11 @@
                                     
                                 </div>
                             </div>
-                            <div id="configuraciones" class="col-6">
+                            <div id="configuraciones" class="col-6 configuracion">
 
                             </div>
                         </div>
                     </div>
-                    <button onclick="location.href='../../cartas-prueba/index.html'" class="btn btn-primary boton">
-                        <h3 class="iniciar">INICIAR</h3>
-                    </button>
                 </div>
             </div> 
         </div>
@@ -59,7 +56,7 @@
 
     
 
-    <script src="js/main.js"></script>
+    <script src="js/sala.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
