--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -13,7 +13,7 @@
         <div class="games-container">
            
             <div class="game-option">
-                <img src="../img/logoN.png" alt="Juego 1" class="game-image">
+                <img src="../img/logo/rompecabeza.png" alt="Juego 1" class="game-image">
                 <a href="../juegos/rompecabezas-prueba/index.html" class="play-button">Rompecabezas</a>
                 <p class="game-description">Resuelve rompecabezas y pon a prueba tus habilidades.</p>
             </div>
