--- a/PROYECTO-MJC memoorize/multijugador/cartas/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/cartas/index.html
@@ -18,26 +18,7 @@
 </head>
 
 <body>
-    <!-- MODAL INICIAL ELEGIR DIFICULTAD -->
-    <!-- <div id="modal" class="modalDialog">
-        <div class="modal-content">
-            <div class="modal-header"> Seleccione el nivel de dificultad </div>
-            <div id="modal-body" class="modal-body">
-                <div id="dificultadBtn" class="modal-body">
-                    <button id="facil" class="btn"> Fácil </button>
-                    <button id="medio" class="btn"> Medio </button>
-                    <button id="dificil" class="btn"> Dificil </button>
-                </div>
-                
-                <div id="otherBtn" class="modal-body">
-                    <button id="tablaPuntuaciones" class="btn neutral"> Ver tabla de puntuaciones </button>
-                    <button id="ayuda" class="btn neutral">
-                        <i class="fa fa-question-circle" aria-hidden="true"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div> -->
+ 
 
     <!-- MODAL GUARDAR PARTIDA -->
     <div id="modalScore" class="hide">
@@ -78,6 +59,7 @@
     </div>
 
     <div class="container">
+        <div>Puntos Acumulados: <span id="puntosAcumuladosValue">0</span></div>
         <div id="numPartidas" class="numPartidas">
             Partida nº: <span id="numPartidasValue"></span>
         </div>
