wordle, solo le falta terminar los estilos

--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
@@ -12,16 +12,8 @@
     <div id="contador"></div>
     <div id="pista" >
         <div class="pistas">
-            <ul>
-                <li>
-                    <p>materia abuntante en las playas, te textura granulada.</p>
-                </li>
-                <li>
-                    <p>materia abuntante en las playas, te textura granulada.</p>
-                </li>
-                <li>
-                    <p>materia abuntante en las playas, te textura granulada.</p>
-                </li>
+            <ul id="displayPista">
+                
             </ul>
         </div>
         <img src="../../../img/icon/pirata.png" alt="">
@@ -30,11 +22,7 @@
         <main class="main-container">
             <!--<h2 class="loading">cargando...</h2>-->
             <div class="fila" id="1">
-                <input type="text" maxlength="1" class="square">
-                <input type="text" maxlength="1" class="square">
-                <input type="text" maxlength="1" class="square">
-                <input type="text" maxlength="1" class="square">
-                <input type="text" maxlength="1" class="square">
+                
             </div>
         </main>
         <div class="resultado" id="resultado">
