wordlw, solo falta un poco de estilos

--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
@@ -13,7 +13,15 @@
     <div id="pista" >
         <div class="pistas">
             <ul id="displayPista">
-                
+                <li>
+                    <p>ajsdj snajdja jansjan jcjkjkjdjaksdn jansasd</p>
+                </li>
+                <li>
+                    <p>ajsdj snajdja jansjan jcjkjkjdjaksdn jansasd</p>
+                </li>
+                <li>
+                    <p>ajsdj snajdja jansjan jcjkjkjdjaksdn jansasd</p>
+                </li>
             </ul>
         </div>
         <img src="../../../img/icon/pirata.png" alt="">
