--- a/PROYECTO-MJC memoorize/login/bar.html
+++ b/PROYECTO-MJC memoorize/login/bar.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga con Olas y Logo</title>
-    <link rel="stylesheet" href="css/bar.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/bar.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body onload="simulateLoading()">
     <div class="center col">
@@ -24,6 +24,6 @@
         </div>
     </div>
 
-    <script src="js/bar.js"></script>
+    <script src="src/js/bar.js"></script>
 </body>
 </html>
