--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="60">
     <title>MJC Memorize</title>
     <link rel="icon" href="../img/logo2.png" type="image/icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
 <body>
@@ -33,6 +33,8 @@
                     <h4 class="text2">Inicio de Sesión</h4>
                 </div>
 
+                <div class="alert alert-success" id="resultado"></div>
+
                 <div class="col-md-11 inputIcon">
                     <input type="email" class="form-control input" id="emailLogin" placeholder="Gmail" required>
                     <span id="icon"> 
@@ -41,7 +43,7 @@
                 </div>
             
                 <div class="col-md-11 inputIcon">
-                    <input type="password" class="form-control input" id="validationCustom01" placeholder="Contraseña" required>
+                    <input type="password" class="form-control input" id="contraseñaLogin" placeholder="Contraseña" required>
                     <span id="icon"> 
                         <img src="../img/icon/password.png" alt="Icono de contraseña">
                     </span>
@@ -53,9 +55,9 @@
 
                 <div class="col-12">
                     <center>
-                        <a href="../menu/bar.html" class="btn btnLogin">
+                        <button id="iniciarSesion" class="btn btnLogin">
                             <h6 class="text">Iniciar Sesión</h6>
-                        </a>
+                        </button>
                     </center>
                 </div>
 
@@ -79,7 +81,8 @@
         </div>
     </main>
 
-    <script src="js/sonido.js"></script>
+    <script src="src/js/sonido.js"></script>
+    <script src="src/js/main.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>    
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
