--- a/PROYECTO-MJC memoorize/cartas/index.html
+++ b/PROYECTO-MJC memoorize/cartas/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="game">
         <div class="controls">
-            <button>Start</button>
+            <button>Iniciar</button>
             <div class="stats">
                 <div class="moves">0 movimiento</div>
                 <div class="timer">Tiempo: 0 sec</div>
