--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -21,7 +21,7 @@
             
             <div class="game-option2">
                 <img src="../img/pruebamar.png" alt="Juego 2" class="game-image">
-                <a href="../juegos/quiz/index.html" class="play-button">Wordle</a>
+                <a href="../juegos/quiz/index.html" class="play-button2">Wordle</a>
                 <p class="game-description">Encuentra palabras.</p>
             </div>
             
