--- a/PROYECTO-MJC memoorize/interfaz/bar.html
+++ b/PROYECTO-MJC memoorize/interfaz/bar.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga con Olas y Logo</title>
-    <link rel="stylesheet" href="bar.css">
-
+    <link rel="stylesheet" href="src/css/bar.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body onload="simulateLoading()">
     <div class="center col">
         <div>
             <center>
-                <img class="logoI" src="../img/logo2.png" alt="Logo del Juego">
+                <img src="../img/logo/aqua-Memorize.png" alt="Logo del Juego" class="logo"> 
             </center>
         </div>
         <div class="container center">
@@ -19,6 +19,7 @@
                 <div class="wave wave1"></div>
                 <div class="wave wave2"></div>
                 <div class="wave wave3"></div>
+                <span class="loading-text">0%</span>
             </div>
         </div>
     </div>
