--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -20,8 +20,8 @@
         <button id="playButton">
             <img class="imgSonido" src="../img/icon/noSonido.png" alt="Icono de sonido">
         </button>
+        <audio id="miCancion" src="../audio/no-copyright-music-181373.mp3 "></audio>        
     </nav>
-    
     <!-- Contenido principal -->
     <main>
         <div id="formulario" class="col-6">
