--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -27,7 +27,7 @@
                     <center>
                         <img src="../../img/logo/aqua-Memorize.png" alt="Logo">
                     </center>
-                    <h4 class="text2">registro</h4>
+                    <h4 class="text2">Registrate</h4>
                 </div>
                 <div class="col-md-11 inputIcon">
                     <input type="text" class="form-control input" id="nombreUsuario" placeholder="usuario" required>
@@ -52,7 +52,7 @@
 
                 <div class="col-12">
                     <center>
-                        <a href="../index.html" class="btn btnLogin">
+                        <a href="../../interfaz/index.html" class="btn btnLogin">
                             <h6 class="text">Registrarte</h6>
                         </a>
                     </center>
@@ -78,9 +78,7 @@
     </main>
 
 
-    <audio id="miCancion" src="../../audio/sonidoFondo.mp3" preload="auto" loop></audio>
-
-
+    <audio id="miCancion" src="../../audio/no-copyright-music-181373.mp3" preload="auto" loop></audio>
     <script src="js/sonido.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
