--- a/PROYECTO-MJC memoorize/login/recuperar/index.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/index.html
@@ -28,7 +28,7 @@
                     <h4 class="text2">Recuperar contraseña</h4>
                 </div>
 
-				<p class="text1">ingresa tu correo para validar la solicitud de cambio de contraseña</p>
+				<h5 class="text1">ingresa tu correo para validar la solicitud de cambio de contraseña</p>
                 <div class="col-md-11 inputIcon">
                     <input type="email" class="form-control input" id="emailLogin" placeholder="Gmail" required>
                     <span id="icon"> 
@@ -53,7 +53,7 @@
     </main>
 
 
-    <audio id="miCancion" src="../../audio/sonidoFondo.mp3" preload="auto" loop></audio>
+    <audio id="miCancion" src="../../audio/no-copyright-music-181373.mp3" preload="auto" loop></audio>
     
     <script src="js/sonido.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>    
