--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -29,7 +29,6 @@
             </div>
         </div>
     </div>
-    
     <nav class="navbar navbar-expand navbar">
         <div class="container">
             <ul class="navbar-nav ml-auto">
@@ -60,7 +59,16 @@
             </ul>
         </div>
     </nav>
-<!-- Modal para Clasificaciones -->
+<!-- Modal para Clasificaciones 
+<div class="back-button">
+    <a href="../login/index.html"><img class="back-button-img" src="../img/icon/image.png" alt="Icono de retroceder"></a>
+    <p class="back-button-text">Regresar</p>
+</div>
+<div class="tienda">
+<img class="tienda-img" src="../img/icon/tienda-Photoroom.png" alt="Icono de tienda"></a>
+    <p class="tienda-text">Tienda</p>
+</div> 
+-->
 <div class="modal fade" id="leaderboardModal" tabindex="-1" aria-labelledby="leaderboardModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -272,6 +280,9 @@
         </div>
     </div>
 </div>
+
+
+
 
 
 
